adjusted readability on smaller screens. shrunk dark mode button. fixed error when mistyping a search in admin functions

--- a/Public/css/styles.css
+++ b/Public/css/styles.css
@@ -1,14 +1,8 @@
-html, body {
-  height: 100%;
-}
+html, body { height: 100%; }
 
-body {
-  font-family: 'Montserrat Alternates', sans-serif;
-}
+body { font-family: 'Montserrat Alternates', sans-serif; }
 
-.page-content {
-  flex: 1 0 auto;
-}
+.page-content { flex: 1 0 auto; }
 
 a {color: inherit;}
 
@@ -16,6 +10,11 @@ a:hover {color: #1abc9c;}
 
 pre {
   white-space: pre-wrap;
+  word-wrap: break-word;
+}
+
+.container {
+  padding-bottom: 30px;
 }
 
 /*---------------------DM Button---------------------*/
@@ -30,7 +29,7 @@ pre {
   text-align: center;
   font-size: 1.5rem;
   padding: .5rem 1rem;
-  width: 12rem;
+  max-width: 12em;
   transition: all 0.2s;
   cursor: pointer;
   margin: 5px;
@@ -120,7 +119,6 @@ pre {
 
 .div-mid {
   display: flex;
-  width: 90rem;
   margin: 0 auto;
   text-align: justify;
 }
@@ -134,10 +132,7 @@ pre {
 
 /*---------------------Night Theme---------------------*/
 
-.dark-bg {
-  background-color: #345B63;
-  color: #DBE6FD;
-}
+.dark-bg { background-color: #345B63; color: #DBE6FD; }
 
 .bg-dark {background-color: #152D35 !important;}
 
@@ -171,12 +166,16 @@ pre {
 
 /*---------------------Image formatting---------------------*/
 
-.contact-img {
-  width:7%;
-  margin: 0 1.5rem;
-}
+.contact-img { width:7%; margin: 0 1.5rem; }
 
-.admin-img {
-  width:12%;
-  margin: 0 1.5rem;
+.admin-img { width:12%; margin: 0 1.5rem; }
+
+@media screen and (max-width: 575px) {
+  .container {
+    padding: 0 25px;
+  }
+
+  #dmSwitch {
+    /* min-width: 50px; */
+  }
 }
